...
            "state": "translated",
            "value": "Ép ngực dây cáp từ trên xuống"
          }
        }
      }
    },
    "Home": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
          }
...
            "state": "translated",
            "value": "Câu lạc bộ nghìn tấn"
          }
        }
      }
    },
    "Knee": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Knee"
...
            "state": "translated",
            "value": "Ghi 50 buổi tập."
          }
        }
      }
    },
    "Log one session.": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Log one session."
...
            "state": "translated",
            "value": "Kéo xô thẳng tay"
          }
        }
      }
    },
    "Strength": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Strength"
...
